--- a/src/content/docs/appendix/social-login.mdx
+++ b/src/content/docs/appendix/social-login.mdx
@@ -106,7 +106,7 @@ dependencies:
 
 2. `android/app/build.gradle` 파일의 `defaultConfig` 섹션에 매니페스트 플레이스홀더 추가:
 
-```gradle
+```txt
 defaultConfig {
     // ...
     manifestPlaceholders += [
