--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -7,13 +7,9 @@ hero:
   image:
     file: ../../assets/houston.webp
   actions:
-    - text: Example Guide
+    - text: 시작하기
       link: /learn-flutter/part1/introduction/
       icon: right-arrow
-    - text: Read the Starlight docs
-      link: https://starlight.astro.build
-      icon: external
-      variant: minimal
 ---
 
 import { Card, CardGrid } from '@astrojs/starlight/components';
