feat: update index.mdx

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,9 +1,9 @@
 ---
-title: Welcome to Starlight
-description: Get started building your docs site with Starlight.
+title: Flutter 앱 개발 가이드
+description: 모바일 및 태블릿 앱을 만들며 겪었던 문제를 공유합니다.
 template: splash
 hero:
-  tagline: Congrats on setting up a new Starlight project!
+  tagline: 모바일 및 태블릿 앱을 만들며 겪었던 문제를 공유합니다.
   image:
     file: ../../assets/houston.webp
   actions:
