--- a/src/content/docs/part8/environment-flavors.mdx
+++ b/src/content/docs/part8/environment-flavors.mdx
@@ -1,6 +1,7 @@
 ---
 title: 환경 분리 및 Flavor 설정
 ---
+import { Aside } from '@astrojs/starlight/components';
 
 실제 앱 개발에서는 개발, 테스트, 스테이징, 프로덕션 등 여러 환경을 관리해야 합니다. Flutter에서는 Flavor라는 기능을 통해 서로 다른 환경에 맞는 앱 변형을 만들 수 있습니다. 이 장에서는 Flutter에서 환경을 분리하고 Flavor를 설정하는 방법에 대해 알아보겠습니다.
 
