--- a/src/content/docs/part6/json-serialization.mdx
+++ b/src/content/docs/part6/json-serialization.mdx
@@ -73,11 +73,11 @@ class User {
 
 ```yaml
 dependencies:
-  json_annotation: ^4.8.1
+  json_annotation: ^4.9.0
 
 dev_dependencies:
-  build_runner: ^2.4.6
-  json_serializable: ^6.7.1
+  build_runner:
+  json_serializable: ^6.9.5
 ```
 
 ### 2. 모델 클래스 정의
@@ -372,12 +372,12 @@ class Profile {
 ```yaml
 dependencies:
   freezed_annotation: ^2.4.1
-  json_annotation: ^4.8.1
+  json_annotation: ^4.9.0
 
 dev_dependencies:
-  build_runner: ^2.4.6
+  build_runner:
   freezed: ^2.4.5
-  json_serializable: ^6.7.1
+  json_serializable: ^6.9.5
 ```
 
 ### 2. freezed 기본 모델 정의
